changed code for impulse signal
made the code simpler by removing the for loops

--- a/Experiment 1/Experiment_1.ipynb
+++ b/Experiment 1/Experiment_1.ipynb
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -100,7 +100,7 @@
               "Text(0.5, 1.0, 'Unit impulse function')"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -117,14 +117,16 @@
       ],
       "source": [
         "t2 = arange(-4,4)\n",
-        "y2 = arange(-4,4)\n",
+        "# y2 = arange(-4,4)\n",
         "\n",
-        "for i in list(y2):\n",
-        "  y2[i] = 0\n",
+        "# for i in list(y2):\n",
+        "#   y2[i] = 0\n",
         "\n",
-        "for j in list(t2):\n",
-        "  if(t2[j] == 0):\n",
-        "    y2[j] = 1\n",
+        "# for j in list(t2):\n",
+        "#   if(t2[j] == 0):\n",
+        "#     y2[j] = 1\n",
+        "\n",
+        "y2 = (t2 == 0)\n",
         "\n",
         "plt.stem(t2,y2)\n",
         "plt.grid()\n",
